# plinthmaker

./: .gitignore  Dockerfile  deploy.sh  main.py  nginx.bootstrap.conf  nginx.conf  pyproject.toml
app/: __init__.py  main.py
scripts/: generate_scale_reference_preview.py
server/: plinthmaker-api.service
src/: cad.py  plinth.stl
static/: app.js  form.js  styles.css
templates/: _error.html  _preview.html  index.html
tests/: test_cad.py  test_web.py
