[project]
name = "plinthmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cadquery>=2.7.0",
    "cq-editor>=0.6.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "ocp>=0.1.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
